Added header, main, footer in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <title>My hopepage</title>
     </head>
     <body>
-        Hello, World!
+        <header>
+            Helo
+        </header>
+        <main>
+            hello
+        </main>
+        <footer>
+            HELLO
+        </footer>
     </body>
 </html>
