modified header, main, footer in index.html

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My hopepage</title>
+        <title>My homepage</title>
     </head>
     <body>
         <header>
-            Helo
+            This is header
         </header>
         <main>
-            hello
+            This is main
         </main>
         <footer>
-            HELLO
+            This is Footer
         </footer>
     </body>
 </html>
