Added a profile pixture, Name and style.css, assets folder, etc.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
     <head>
         <meta charset="utf-8">
         <title>My homepage</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            This is header
+            <div class="header">
+                <img class="profile" src="assets/profile-picture.png" alt="A picture of Amanullah Mahmood" title="Amanullah Mahmood">
+                <h1 class="profile-name">Amanullah Mahmood</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a>Blogs</a></li>
+                    <li><a>Projects</a></li>
+                    <li><a>Courses</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
-            This is main
+            
         </main>
         <footer>
-            This is Footer
+            
         </footer>
     </body>
 </html>
