--- a/blogs.html
+++ b/blogs.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My homepage</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -11,9 +12,9 @@
                 <img class="profile" src="assets/profile-picture.png" alt="A picture of Amanullah Mahmood" title="Amanullah Mahmood">
                 <h1 class="profile-name">Amanullah Mahmood</h1>
             </div>
-            <nav class="navbar">
+            <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="/blogs.html">Blogs</a></li>
                     <li><a href="projects .html">Projects</a></li>
                     <li><a href="coursers.html">Courses</a></li>
@@ -21,7 +22,7 @@
             </nav>
         </header>
         <main>
-            This is main
+            
         </main>
         <footer>
             
