--- a/projects .html
+++ b/projects .html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My homepage</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -13,10 +14,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="">Blogs</a></li>
-                    <li><a href="">Projects</a></li>
-                    <li><a href="">Courses</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="/blogs.html">Blogs</a></li>
+                    <li><a href="projects .html">Projects</a></li>
+                    <li><a href="coursers.html">Courses</a></li>
                 </ul>
             </nav>
         </header>
