--- a/blogs.html
+++ b/blogs.html
@@ -14,15 +14,14 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="/blogs.html">Blogs</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Blogs</a></li>
                     <li><a href="projects .html">Projects</a></li>
                     <li><a href="coursers.html">Courses</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            
         </main>
         <footer>
             
