--- a/coursers.html
+++ b/coursers.html
@@ -14,10 +14,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="/blogs.html">Blogs</a></li>
                     <li><a href="projects .html">Projects</a></li>
-                    <li><a href="coursers.html">Courses</a></li>
+                    <li><a href="#">Courses</a></li>
                 </ul>
             </nav>
         </header>
