--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            
+        <main class="content">
+            <h1 id="hello">Hello!</h1>
+            <p>I’m Brian, a Senior Preceptor at Harvard’s <a href="https://www.dce.harvard.edu">Division of Continuing Education</a>.
+                I graduated from Harvard College in 2019 with a degree in computer science and linguistics.
+                I currently teach <a href="http://cs50.edx.org/ai">Introduction to Artificial Intelligence with Python</a> and 
+                <a href="https://www.edx.org/course/cs50s-web-programming-with-python-and-javascript">Web Programming with Python and JavaScript</a> 
+                offered through edX, Harvard Extension School and Harvard Summer School.
+                I work with the team at <a href="https://cs50.harvard.edu/">CS50</a>, Harvard’s introductory course in computer science, 
+                where I focus on teaching, curricular development, outreach, and software tools.</p>
         </main>
         <footer>
             
