Added an scroll feature in navbar

--- a/blogs.html
+++ b/blogs.html
@@ -12,7 +12,7 @@
                 <img class="profile" src="assets/profile-picture.png" alt="A picture of Amanullah Mahmood" title="Amanullah Mahmood">
                 <h1 class="profile-name">Amanullah Mahmood</h1>
             </div>
-            <nav>
+            <nav class="overflow-scroll">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Blogs</a></li>
