Added a content in main

--- a/blogs.html
+++ b/blogs.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My homepage</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -22,7 +23,8 @@
             </nav>
         </header>
         <main>
-            
+            <h1 id="hello">Hello!</h1>
+            <p>This is a Blog page!</p>
         </main>
         <footer>
             
