--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My homepage</title>
+        <title>Homepage</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     </head>
@@ -24,8 +24,7 @@
         </header>
         <main class="content">
             <h1 id="hello">Hello!</h1>
-            <p style="text-align:justify"></p>
-        </main>
+            <p>This is a homepage!</p>
         <footer>
             
         </footer>
