--- a/projects .html
+++ b/projects .html
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="content">
             <h1 id="hello">Hello!</h1>
             <p>This is a Project Page!</p>
         </main>
