Added a footer content

--- a/index.html
+++ b/index.html
@@ -23,10 +23,21 @@
             </nav>
         </header>
         <main class="content">
-            <h1 id="hello">Hello!</h1>
-            <p>This is a homepage!</p>
-        <footer>
+            <h1>Hello!</h1>
+            <p>I am Amanullah Mahmood. I live in New Delhi
+                 and am doing <a href="https://en.wikipedia.org/w
+                iki/Bachelor_of_Technology">B. Tech</a> from <a href="htt
+                p://jmi.ac.in/">Jamia Millia Islamia</a>.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur ipsum deserunt dolore sunt pariatur repudiandae quam, beatae quia accusantium nam voluptatibus. Consectetur minus incidunt esse nulla quia fuga nemo in iure velit cupiditate, quasi eligendi dolor, soluta, quae harum numquam nobis non reprehenderit delectus aut eveniet? Amet eligendi itaque quisquam molestiae culpa ex facilis, porro, reprehenderit laudantium, ipsam est nemo. Unde ad praesentium quasi quo illum qui eaque mollitia nobis ea libero dicta voluptate atque sed, pariatur iure cumque reiciendis rem quae consequuntur eum laboriosam. Facere necessitatibus vel voluptatum maiores earum commodi laborum veniam doloribus numquam repellendus odit blanditiis officiis mollitia error molestiae tempore velit dolores eos quaerat expedita distinctio, perferendis sit! Dolorem qui alias quidem amet sit tenetur, facere corporis eligendi incidunt velit voluptate quos aliquid dicta placeat aspernatur nam error doloribus. Incidunt id sunt modi esse. Iusto quis impedit magnam enim, voluptatem exercitationem placeat dolorum ea expedita, similique ad corrupti ducimus, vero provident voluptatibus laborum repudiandae fuga unde voluptates libero. Quae, vitae, molestiae odit nobis tempora minus deserunt, dicta consectetur eos nesciunt repudiandae. Explicabo et adipisci excepturi itaque iusto accusantium natus soluta, modi asperiores aut quo accusamus, exercitationem, quisquam officiis pariatur inventore voluptas unde tempore sint quas. Tempora iure aut et. Quis voluptatum quisquam incidunt a blanditiis! Placeat nesciunt reprehenderit reiciendis, ipsam commodi ab laboriosam rerum beatae animi nisi enim perferendis! Tempore culpa laborum rerum quia perferendis at atque fuga doloremque maiores nihil nam sunt labore ab, eius doloribus ullam dignissimos exercitationem cupiditate ea molestias soluta facere dicta! Maiores dolores fugit illum omnis laudantium beatae, sed maxime quos nemo natus repellat culpa aperiam quod cum! Eum, ex repellat, voluptatem velit illum perferendis dolorum esse quaerat quas, obcaecati laboriosam sequi corporis architecto sapiente ratione nam labore nobis est consectetur. Voluptates maxime tenetur illum ipsam? Officia, assumenda repudiandae? Debitis deleniti consequuntur molestiae recusandae quis accusantium numquam. Sequi numquam debitis quam tempore sint error quidem nemo corrupti! Minima voluptates doloremque aliquam et quod odio corrupti dicta asperiores sequi voluptatum quam odit distinctio harum veritatis tempore eos accusantium quidem, ipsa dolorem quia facilis! Itaque dolor tempore inventore delectus explicabo quae porro, enim suscipit magnam ratione similique excepturi laboriosam mollitia quos quas at incidunt, cumque amet? Ipsum debitis repellat eius iste odit amet porro nulla illo! Numquam nesciunt, laudantium, provident quos, necessitatibus quas aliquid quo consequatur cum porro et sapiente magni blanditiis incidunt perspiciatis eos? Rerum error placeat ad dolore laboriosam adipisci mollitia excepturi sunt quidem nobis ab consequatur provident, tenetur nihil hic esse quia nostrum culpa totam! Quibusdam autem laudantium esse, blanditiis architecto doloribus quia illo quasi impedit fuga earum commodi ratione deleniti reprehenderit quidem et natus nihil, vel, voluptatibus accusantium fugit quisquam minus quas minima. Pariatur numquam aliquid vitae facilis velit autem, unde eveniet doloribus itaque, animi optio, veritatis consequatur. Id nam adipisci numquam atque modi iure officiis quasi necessitatibus consequuntur eveniet asperiores velit unde nemo vel iste aut non sunt ratione tempora quos obcaecati, dolorum maiores? Pariatur ipsam facilis consectetur sint, nam sit, eaque molestias repellat odit, facere sed!</p>
             
+        </main>
+        <footer>
+            <ul>
+                <li><a href="https://github.com/amaanweb">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/iamanullahmahmood/">LinkedIn</a></li>
+                <li><a href="/assets/BrianYu_Resume.pdf">Resume</a></li>
+              </ul>
         </footer>
     </body>
 </html>
