--- a/projects .html
+++ b/projects .html
@@ -27,7 +27,11 @@
             <p>This is a Project Page!</p>
         </main>
         <footer>
-            
+            <ul>
+                <li><a href="https://github.com/brianyu28">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/brian-yu/">LinkedIn</a></li>
+                <li><a href="/assets/BrianYu_Resume.pdf">Resume</a></li>
+              </ul>
         </footer>
     </body>
 </html>
