Added a footer content

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul>
                 <li><a href="https://github.com/amaanweb">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/iamanullahmahmood/">LinkedIn</a></li>
-                <li><a href="/assets/BrianYu_Resume.pdf">Resume</a></li>
+                <li><a href="/assets/resume_amanullah.pdf">Resume</a></li>
               </ul>
         </footer>
     </body>
