modified navbar and footer

--- a/blogs.html
+++ b/blogs.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My homepage</title>
+        <title>Blogs of Amanullah</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="header">
-                <img class="profile" src="assets/profile-picture.png" alt="A picture of Amanullah Mahmood" title="Amanullah Mahmood">
+                <img class="profile" src="assets/profile.jpg" alt="A picture of Amanullah Mahmood" title="Amanullah Mahmood">
                 <h1 class="profile-name">Amanullah Mahmood</h1>
             </div>
             <nav class="overflow-scroll">
@@ -28,9 +28,9 @@
         </main>
         <footer>
             <ul>
-                <li><a href="https://github.com/brianyu28">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/brian-yu/">LinkedIn</a></li>
-                <li><a href="/assets/BrianYu_Resume.pdf">Resume</a></li>
+                <li><a href="https://github.com/amaanweb">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/iamanullahmahmood/">LinkedIn</a></li>
+                <li><a href="/assets/resume_amanullah.pdf">Resume</a></li>
               </ul>
         </footer>
     </body>
