modified navbar and footer

--- a/blogs.html
+++ b/blogs.html
@@ -16,7 +16,7 @@
             <nav class="overflow-scroll">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Blogs</a></li>
+                    <li><a class="current" href="#">Blogs</a></li>
                     <li><a href="projects .html">Projects</a></li>
                     <li><a href="coursers.html">Courses</a></li>
                 </ul>
