--- a/projects .html
+++ b/projects .html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="/blogs.html">Blogs</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a class="current" href="#">Projects</a></li>
                     <li><a href="coursers.html">Courses</a></li>
                 </ul>
             </nav>
