--- a/coursers.html
+++ b/coursers.html
@@ -18,7 +18,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="/blogs.html">Blogs</a></li>
                     <li><a href="projects .html">Projects</a></li>
-                    <li><a href="#">Courses</a></li>
+                    <li><a class="current" href="#">Courses</a></li>
                 </ul>
             </nav>
         </header>
