--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav class="overflow-scroll">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a class="current" href="#">Home</a></li>
                     <li><a href="blogs.html">Blogs</a></li>
                     <li><a href="projects .html">Projects</a></li>
                     <li><a href="coursers.html">Courses</a></li>
